# one-off-claude-incognito

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: record-demo.sh  verify-e2e.sh
src/: chat.js  chat.ts  index.html  settings.html  settings.js  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray.rgba
src-tauri/src/: chat.rs  cleanup.rs  lib.rs  main.rs  settings.rs
src/lib/: effort.js  effort.test.js  effort.test.ts  effort.ts  events.js  events.test.js  events.test.ts  events.ts  ime.js  ime.test.js  ime.test.ts  ime.ts  keyboard.js  keyboard.test.js  keyboard.test.ts  keyboard.ts  listen-target.test.ts  listen-target.ts  markdown.test.ts  markdown.ts  models.js  models.test.js  models.test.ts  models.ts
