[package]
name = "claude-incognito"
version = "0.1.0"
description = "Incognito Claude chat overlay summoned by a global hotkey"
authors = ["Yohei Yamasaki"]
edition = "2021"

[lib]
name = "claude_incognito_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
window-vibrancy = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
